--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "jsdom": "^9.4.1",
     "mocha": "^3.0.1",
     "mocha-multi": "^0.9.1",
-    "node-inspector": "^0.12.8",
+    "node-inspector": ">=0.12.8",
     "sinon": "^1.17.6"
   },
   "dependencies": {
