--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "dependencies": {
     "mocha-jsdom": "^1.1.0",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
