--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sinon": "^1.17.6"
   },
   "dependencies": {
+    "check-node-version": "^2.1.0",
     "mocha-jsdom": "^1.1.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
