--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "mocha-jsdom": "^1.1.0",
+    "npm": "^6.0.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   }
