--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Build a reducer to manage state",
   "main": "index.js",
   "scripts": {
+      "start": "react-scripts start",
     "debug": "node-debug --hidden node_modules _mocha --watch",
     "debug-ide": "./bin/debug-ide",
     "test": "mocha -R mocha-multi --reporter-options nyan=-,json=.results.json"
